--- a/energy_data_visualization_project/templates/index.html
+++ b/energy_data_visualization_project/templates/index.html
@@ -29,35 +29,37 @@
   // d3.json("http://localhost:5000/electricity_data", function(json){
   // d3.json("http://localhost:5000/gas_data", function(data){
 
-  //Read the data
-  d3.csv("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/data_connectedscatter.csv", function(data) {
-
-      // List of groups (here I have one group per column)
-      var allGroup = ["valueA", "valueB", "valueC"]
-
-      // Reformat the data: we need an array of arrays of {x, y} tuples
-      var dataReady = allGroup.map( function(grpName) { // .map allows to do something for each element of the list
-        return {
-          name: grpName,
-          values: data.map(function(d) {
-            return {time: d.time, value: +d[grpName]};
-          })
-        };
-      });
-
-      console.log(dataReady);
-      // debugger;
-    });
+  // //Read the data
+  // d3.csv("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/data_connectedscatter.csv", function(data) {
+  //
+  //     // List of groups (here I have one group per column)
+  //     var allGroup = ["valueA", "valueB", "valueC"]
+  //
+  //     // Reformat the data: we need an array of arrays of {x, y} tuples
+  //     var dataReady = allGroup.map( function(grpName) { // .map allows to do something for each element of the list
+  //       return {
+  //         name: grpName,
+  //         values: data.map(function(d) {
+  //           return {time: d.time, value: +d[grpName]};
+  //         })
+  //       };
+  //     });
+  //
+  //     console.log(dataReady);
+  //     // debugger;
+  //   });
 
 
   d3.queue()
+    // .defer(d3.csv, "http://localhost:5000/make_forecast")
     .defer(d3.json, "http://localhost:5000/electricity_data")
     .defer(d3.json, "http://localhost:5000/gas_data")
     .await(plotData);
 
+  // d3.csv("http://localhost:5000/make_forecast", function (electricity) {
   function plotData(error, electricity, gas) {
 
-    if (error) { console.log(error); }
+    // if (error) { console.log(error); }
 
     var dataGroups = ["Electricity", "Gas"];
 
@@ -65,7 +67,7 @@
     electricity = electricity.slice(0,100);
     gas = gas.slice(0,300);
 
-    console.log(electricity, gas)
+    // console.log(electricity, gas)
 
     // // var data = json.map( d => ({date: d3.timeParse("%e %b %-I:%M %p")(d[0]), value: d[1]}) );
     // var data = dataGroups.map( function(grpName) {
@@ -78,22 +80,30 @@
     //         }})
     //     }});
 
+    // debugger;
+
     // Parse the data from the JSON inputs
     var dataArray = [
       {
         name: "Electricity",
         entries: electricity.map( function (d) {
+          // debugger;
           return {
             date: d3.timeParse("%Y-%m-%d %H:%M:%S")(d[0]),
             value: d[1]
             }})
       },
+      // {
+      //   name: "Electricity Prediction",
+      //   entries: electricity.map( function (d) {
+      //     return {
+      //       date: d3.timeParse("%Y-%m-%d %H:%M:%S")(d[0]),
+      //       value: d[2]
+      //       }})
+      // },
       {
         name: "Gas",
         entries: gas.map( function (d) {
-
-          // debugger;
-
           return {
             date: d3.timeParse("%m/%d/%Y %H:%M:%S")(d[0].split(" PST")[0]),
 
@@ -102,7 +112,9 @@
             }})
       }
 
-    ]
+    ];
+
+    console.log(dataArray);
 
     // debugger;
 
@@ -112,10 +124,10 @@
     // var domainX = dataMapX.reduce((acc, curr) => {return [Math.min(acc[0], curr[0]), Math.max(acc[1], curr[1])];}, dataMapX[0])
     // var domainY = dataMapX.reduce((acc, curr) => {return [Math.min(acc[0], curr[0]), Math.max(acc[1], curr[1])];}, dataMapY[0])
 
-    var domainX = d3.extent(dataArray.map(values => {return values.entries.map(entry => entry.date);}).reduce((prev, curr) => prev.concat(curr)))
-    var domainY = d3.extent(dataArray.map(values => {return values.entries.map(entry => entry.value);}).reduce((prev, curr) => prev.concat(curr)))
+    var domainX = d3.extent(dataArray.map(values => {return values.entries.map(entry => entry.date);}).reduce((prev, curr) => prev.concat(curr)));
+    var domainY = d3.extent(dataArray.map(values => {return values.entries.map(entry => entry.value);}).reduce((prev, curr) => prev.concat(curr)));
 
-    console.log(domainX, domainY);
+    // console.log(domainX, domainY);
 
     // dataArray[0].entries = dataArray[0].slice(0, 100);
     // dataArray[1].entries = dataArray[1].slice(0, 100);
@@ -145,8 +157,6 @@
       .range( [height, 0] )
     svg.append("g")
       .call(d3.axisLeft(y));
-    // Add the line
-    svg.append()
 
 
     // Add the lines
@@ -154,15 +164,16 @@
       // .x(function(d) { return x(d.date) })
       // .y(function(d) { return y(d.value)})
       .x(function(d) { return x(+d.date) })
-      .y(function(d) { return y(+d.value)})
+      .y(function(d) { return y(+d.value)});
     svg.selectAll("myLines")
       .data(dataArray)
       .enter()
       .append("path")
         .attr("d", function(d) { return line(d.entries) })
         .attr("stroke", function(d){ return myColor(d.name) })
+        .attr("data-legend", function(d){ return d.name })
         .style("stroke-width", 4)
-        .style("fill", "none")
+        .style("fill", "none");
 
     // // Add the points
     // svg
@@ -192,13 +203,26 @@
           // Keep only the last value of each time series
           .datum(function(d) { return {name: d.name, value: d.entries[d.entries.length - 1]}; })
           // Put the text at the position of the last point
-          .attr("transform", function(d) { return "translate(" + x(d.date) + "," + y(d.value) + ")"; })
-          // .attr("transform", function(d) { return "translate(" + x(d.date) + "," + y(d.value) + ")"; })
+          .attr("transform", function(d) { return "translate(" + x(d.value.date) + "," + y(d.value.value) + ")"; })
           .attr("x", 12)    // Shift the text a bit more right
           .text(function(d) { return d.name; })
           .style("fill", function(d) { return myColor(d.name) })
-          .style("font-size", 15)
+          .style("font-size", 15);
 
-    }
+    var legend = svg.append("g")
+      .attr("class", "legend")
+      .attr("transform", "translate(50,30)")
+      .style("font-size", "12px")
+      .call(d3.legend)
+
+    // setTimeout(function() {
+    //   legend
+    //     .style("font-size", "20px")
+    //     .attr("data-style-padding", 10)
+    //     .call(d3.legend)
+    // }, 1000)
+
+
+    };
 
 </script>
