L2 regularized prediction with real data plotting works!

--- a/energy_data_visualization_project/templates/index.html
+++ b/energy_data_visualization_project/templates/index.html
@@ -82,7 +82,8 @@
     for (const [key, value] of Object.entries(electricityForecast)) {
       elecPredArray.push({
         date:  d3.timeParse("%Y-%m-%d %H:%M:%S")(value.Timestamp),
-        value: value.ElectricityConsumptionForecast
+        value: value.Prediction
+        // value: value.ElectricityConsumptionForecast
       })
     }
 
